comenzada la matriz para la sopa de letras

--- a/config.json
+++ b/config.json
@@ -1,18 +1,14 @@
 [
     {
-        "Palabra": "falacia",
+        "Palabra": "palabra",
         "Tipo": "NN"
     },
     {
-        "Palabra": "encefalograma",
+        "Palabra": "falacia",
         "Tipo": "NN"
     },
     {
         "Palabra": "correr",
         "Tipo": "VB"
-    },
-    {
-        "Palabra": "importante",
-        "Tipo": "JJ"
     }
 ]
