Terminada la relación palabra/tipo en la sopa de letras. Falta terminar la sopa en vertical y vincular el archivo de configuración con el main.

--- a/config.json
+++ b/config.json
@@ -1,1 +1,14 @@
-[]
+[
+    {
+        "Palabra": "palabra",
+        "Tipo": "NN"
+    },
+    {
+        "Palabra": "falacia",
+        "Tipo": "NN"
+    },
+    {
+        "Palabra": "correr",
+        "Tipo": "VB"
+    }
+]
