Solucione los problemas del programa de configuracion y la diferencia de tamaño de los botones

--- a/configMisc.json
+++ b/configMisc.json
@@ -1,8 +1,8 @@
 [
     {
-        "Ayuda": "Definicion y Palabras",
-        "Fuente": "Comic",
-        "Orientación": "Vertical",
+        "Ayuda": "Solo Definicion",
+        "Fuente": "Times",
+        "Orientación": "Horizontal",
         "MayusMinus": "Minúsculas"
     }
 ]
